--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon --env-file=.env ./src/app.js --ext js,jsx",
+    "dev": "node -r dotenv/config ./src/app.js",
     "dbCreate": "npx sequelize db:create",
     "dbMigrate": "npx sequelize db:migrate",
     "dbSeedAll": "npx sequelize db:seed:all",
