--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "deploy": "gh-pages -d dist"
   },
   "dependencies": {
+    "@heroicons/react": "^2.2.0",
     "@tailwindcss/vite": "^4.0.9",
     "axios": "^1.7.9",
     "clsx": "^2.1.1",
