--- a/server/.env.example
+++ b/server/.env.example
@@ -12,5 +12,15 @@ COOKIE_DOMAIN=pipeline-fittings-store-client.vercel.app
 ACCESS_TOKEN_SECRET=your-access-secret-key
 REFRESH_TOKEN_SECRET=your-refresh-secret-key
 
+# Session configuration
+SESSION_SECRET=your-session-secret-key
+COOKIE_MAX_AGE=604800000
+
+# Client URL for CORS
+CLIENT_URL=https://pipeline-fittings-store-client.vercel.app
+
+# Debug options
+DEBUG_COOKIES=true
+
 # Other configuration
 PORT=3000
