--- a/server/.env.example
+++ b/server/.env.example
@@ -1,26 +1,52 @@
-# Environment configuration
+# Environment Configuration
 NODE_ENV=production
 
-# Indicates this is a Render deployment
-IS_RENDER=true
+# Server Configuration
+PORT=3000
 
-# Frontend domain for cookies
+# Cross-Domain Cookie Configuration
+IS_RENDER=true
 FRONTEND_DOMAIN=pipeline-fittings-store-client.vercel.app
 COOKIE_DOMAIN=pipeline-fittings-store-client.vercel.app
+CLIENT_URL=https://pipeline-fittings-store-client.vercel.app
+COOKIE_SAME_SITE=none
+COOKIE_SECURE=true
+COOKIE_HTTP_ONLY=true
+COOKIE_MAX_AGE=604800000
+DEBUG_COOKIE_CONFIG=true
 
-# JWT secrets
+# CORS Configuration
+ALLOWED_ORIGINS=https://pipeline-fittings-store-client.vercel.app,https://www.pipeline-fittings-store-client.vercel.app
+
+# JWT Configuration
 ACCESS_TOKEN_SECRET=your-access-secret-key
 REFRESH_TOKEN_SECRET=your-refresh-secret-key
-
-# Session configuration
+JWT_SECRET=your-jwt-secret
+JWT_PASS=your-jwt-password
 SESSION_SECRET=your-session-secret-key
-COOKIE_MAX_AGE=604800000
 
-# Client URL for CORS
-CLIENT_URL=https://pipeline-fittings-store-client.vercel.app
+# Database Configuration
+DB_HOST=your-db-host
+DB_PORT=5432
+DB_USERNAME=your-db-username
+DB_PASSWORD=your-db-password
+DB_DATABASE=your-db-name
 
-# Debug options
-DEBUG_COOKIES=true
+# Email Configuration
+EMAIL_USER=your-email@example.com
+EMAIL_PASSWORD=your-email-password
+SMTP_HOST=smtp.example.com
+SMTP_PORT=465
+ADMIN_EMAIL=admin@example.com
 
-# Other configuration
-PORT=3000
+# Cloudinary Configuration
+CLOUDINARY_CLOUD_NAME=your-cloud-name
+CLOUDINARY_API_KEY=your-api-key
+CLOUDINARY_API_SECRET=your-api-secret
+CLOUDINARY_WATERMARK_ID=your-watermark-id
+CLOUDINARY_WATERMARK_OPACITY=70
+CLOUDINARY_WATERMARK_SIZE=0.9
+
+# Telegram Configuration
+TELEGRAM_BOT_TOKEN=your-telegram-bot-token
+TELEGRAM_CHAT_ID=your-telegram-chat-id
