--- a/client/vercel.json
+++ b/client/vercel.json
@@ -1,6 +1,14 @@
 {
   "rewrites": [
     {
+      "rewrites": [
+        {
+          "source": "/api/(.*)",
+          "destination": "https://pipeline-fittings-store.onrender.com/api/$1"
+        }
+      ]
+    },
+    {
       "source": "/uploads/:path*",
       "destination": "/uploads/:path*"
     },
